# tinyrenderer

./: CMakeLists.txt  README.md  geometry.hpp  lesson6_buffer-diablo3.tga  main.cpp  matrix.cp  matrix.cp.bk  matrix.cpp  matrix.hpp  matrix.hpp.bk  model.cpp  model.hpp  our_gl.cpp  our_gl.hpp  tgaimage.cpp  tgaimage.h  tinyrenderer_lesson6.tga  vector2.hpp  vector3.hpp
include/: matrix.hpp  model.hpp  our_gl.hpp  shader_phong.hpp  tgaimage.h  vector3.hpp
samples/basic/: CMakeLists.txt  main.cpp
samples/sfml/: CMakeLists.txt  main.cpp
src/: model.cpp  our_gl.cpp  tgaimage.cpp
